Fix issue with flickering opacity due to countdown

--- a/src/components/SupplyView/SupplyChart.module.scss
+++ b/src/components/SupplyView/SupplyChart.module.scss
@@ -17,7 +17,10 @@ $tooltip-zindex: 2;
 
 .supplyChart {
   position: relative;
+  // Fixes opacity flicker caused by countdown.
+  backface-visibility: hidden;
 }
+
 .supplyChart :global {
   // Chart series
   .highcharts-series {
